@@ -14,6 +14,7 @@ import ir.instructions.Instructions;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 
 
 public class InstructionSelector {
@@ -52,10 +53,10 @@ public class InstructionSelector {
 
                 if (g.getType().getContainedTys(0).isInt32Ty()) {
                     // global int
-                    value = ((Constants.ConstantInt)g.getOperand(0)).getVal();
-                } else if (g.getType().getContainedTys(0).isFloatTy()){
-                    value =  Float.floatToIntBits(((Constants.ConstantFP) g.getOperand(0)).getVal());
-                } else{
+                    value = ((Constants.ConstantInt) g.getOperand(0)).getVal();
+                } else if (g.getType().getContainedTys(0).isFloatTy()) {
+                    value = Float.floatToIntBits(((Constants.ConstantFP) g.getOperand(0)).getVal());
+                } else {
                     throw new RuntimeException("Shouldn't be here");
                 }
                 var dataBlock = new MachineDataBlock(name, value);
@@ -172,38 +173,45 @@ public class InstructionSelector {
 
                 if (mf.isLeaf()) {
                     newInst = new Branch(mbb, new MCRegister(MCRegister.RegName.LR), false, Branch.Type.Ret);
-                    newInst.setEpilogue(true);
-                    newInst.pushBacktoInstList();
 
                 } else {
                     newInst = new PushOrPop(mbb, PushOrPop.Type.Pop, new MCRegister(MCRegister.RegName.PC));
-                    newInst.setEpilogue(true);
-                    newInst.pushBacktoInstList();
                 }
+                newInst.setEpilogue(true);
+                newInst.pushBacktoInstList();
             }
             case Br -> {
+                // TODO: float num cmp
                 if (ir.getNumOperands() == 1) { // unconditional branch
                     var dest = ir.getOperand(0);
                     new Branch(mbb, mf.getBBMap().get((BasicBlock) dest), false, Branch.Type.Block).pushBacktoInstList();
                 } else { // conditional branch
-                    var cond = (CmpInst) ir.getOperand(0);
-                    var op = cond.getPredicate();
-                    new Cmp(mbb, valueToReg(mbb, cond.getOperand(0)), valueToMCOperand(mbb, cond.getOperand(1))).pushBacktoInstList();
-                    // TODO: change the ir.getOperand(2) after merge
-                    MachineInstruction inst = new Branch(mbb, mf.getBBMap().get(ir.getOperand(2)), false, Branch.Type.Block);
-                    inst.setCond(switch (op) {
-                        case ICMP_EQ -> MachineInstruction.Condition.EQ;
-                        case ICMP_NE -> MachineInstruction.Condition.NE;
-                        case ICMP_SGE -> MachineInstruction.Condition.GE;
-                        case ICMP_SGT -> MachineInstruction.Condition.GT;
-                        case ICMP_SLE -> MachineInstruction.Condition.LE;
-                        case ICMP_SLT -> MachineInstruction.Condition.LT;
-                        default -> null;
-                    });
-                    inst.pushBacktoInstList();
+                    if (ir.getOperand(0).getType().isInt1Ty()) {
+                        int val = ((Constants.ConstantInt)(ir.getOperand(0))).getVal();
+                        if(val == 0){
+                             new Branch(mbb, mf.getBBMap().get(ir.getOperand(1)), false, Branch.Type.Block).pushBacktoInstList();
+                        } else {  // must be 1
+                            new Branch(mbb, mf.getBBMap().get(ir.getOperand(2)), false, Branch.Type.Block).pushBacktoInstList();
+                        }
+                    } else { // cond is an instruction
+                        var cond = (CmpInst) ir.getOperand(0);
+                        var op = cond.getPredicate();
+                        new Cmp(mbb, valueToReg(mbb, cond.getOperand(0)), valueToMCOperand(mbb, cond.getOperand(1))).pushBacktoInstList();
+                        // TODO: change the ir.getOperand(2) after merge
+                        MachineInstruction inst = new Branch(mbb, mf.getBBMap().get(ir.getOperand(2)), false, Branch.Type.Block);
+                        inst.setCond(switch (op) {
+                            case ICMP_EQ -> MachineInstruction.Condition.EQ;
+                            case ICMP_NE -> MachineInstruction.Condition.NE;
+                            case ICMP_SGE -> MachineInstruction.Condition.GE;
+                            case ICMP_SGT -> MachineInstruction.Condition.GT;
+                            case ICMP_SLE -> MachineInstruction.Condition.LE;
+                            case ICMP_SLT -> MachineInstruction.Condition.LT;
+                            default -> null;
+                        });
+                        inst.pushBacktoInstList();
 
-                    new Branch(mbb, mf.getBBMap().get(ir.getOperand(1)), false, Branch.Type.Block).pushBacktoInstList();
-
+                        new Branch(mbb, mf.getBBMap().get(ir.getOperand(1)), false, Branch.Type.Block).pushBacktoInstList();
+                    }
                 }
             }
             case Call -> {
@@ -274,7 +282,7 @@ public class InstructionSelector {
             case Store -> {
                 Register op1 = valueToReg(mbb, ir.getOperand(0)),
                         op2 = valueToReg(mbb, ir.getOperand(1));
-                new LoadOrStore(mbb, LoadOrStore.Type.STORE, (Register) op1, new Address(op2)).pushBacktoInstList();
+                new LoadOrStore(mbb, LoadOrStore.Type.STORE, op1, new Address(op2)).pushBacktoInstList();
             }
             case Load -> {
                 Register src = valueToReg(mbb, ir.getOperand(0));
@@ -328,17 +336,23 @@ public class InstructionSelector {
                 if (dest == null) dest = srcAddr;
                 valueMap.put(ir, dest);
             }
+            case ICmp -> {
+                // pass; will do it when needed
+            }
+
+            case ZExt -> {
+                System.out.println(ir);
+                Register r1 = valueToReg(mbb, ir.getOperand(0));
+
+            }
 
             // TODO: Mod
-            case Sub, Add, Mul, SDiv -> {
+            case Sub, Add -> {
                 MCOperand op1 = valueToMCOperand(mbb, ir.getOperand(0)),
                         op2 = valueToMCOperand(mbb, ir.getOperand(1));
 
                 Register dest = new VirtualRegister();
                 valueMap.put(ir, dest);
-
-                assert op1 instanceof ImmediateNumber || op1 instanceof Register;
-                assert op2 instanceof ImmediateNumber || op2 instanceof Register;
 
                 if (op1 instanceof ImmediateNumber) {
                     if (Instruction.isCommutative(ir.getOp())) {
@@ -351,22 +365,42 @@ public class InstructionSelector {
                         op1 = n;
                     }
                 }
-                if (op2 instanceof ImmediateNumber
-                        && (ir.getOp() == Instruction.Ops.Mul || ir.getOp() == Instruction.Ops.SDiv)) {
-                    MCOperand n = new VirtualRegister();
-                    new Move(mbb, n, op2).pushBacktoInstList();
-                    op2 = n;
-                }
+
                 Arithmetic.Type mcType = switch (ir.getOp()) {
                     case Sub -> Arithmetic.Type.SUB;
                     case Add -> Arithmetic.Type.ADD;
+                    default -> null;
+                };
+                new Arithmetic(mbb, mcType, dest, (Register) op1, op2).pushBacktoInstList();
+            }
+            case Mul, SDiv -> {
+                Register op1 = valueToReg(mbb, ir.getOperand(0)),
+                        op2 = valueToReg(mbb, ir.getOperand(1));
+
+                Register dest = new VirtualRegister();
+                valueMap.put(ir, dest);
+                new Arithmetic(mbb, switch (ir.getOp()) {
                     case Mul -> Arithmetic.Type.MUL;
                     case SDiv -> Arithmetic.Type.SDIV;
                     default -> null;
-                };
-                assert mcType != null;
-                new Arithmetic(mbb, mcType, dest, (Register) op1, op2).pushBacktoInstList();
+                }, dest, op1, op2).pushBacktoInstList();
+            }
+            case SRem -> {
+                mf.setLeaf(false);
+                Register r1 = valueToReg(mbb, ir.getOperand(0)),
+                        r2 = valueToReg(mbb, ir.getOperand(1));
 
+
+                new Move(mbb, new MCRegister(Register.Content.Int, 0), r1).pushBacktoInstList();
+                new Move(mbb, new MCRegister(Register.Content.Int, 1), r2).pushBacktoInstList();
+
+
+                new Branch(mbb, "__aeabi_idivmod", true, Branch.Type.Call).pushBacktoInstList();
+
+
+                var dest = new VirtualRegister();
+                new Move(mbb, dest, new MCRegister(MCRegister.RegName.r1)).pushBacktoInstList();
+                valueMap.put(ir, dest);
             }
 
             case FAdd, FDiv, FMul, FSub -> {
@@ -396,7 +430,7 @@ public class InstructionSelector {
                     default -> null;
                 },
                         dest, r1, r2).setForFloat(new ArrayList<>(
-                        Arrays.asList("f32"))).pushBacktoInstList();
+                        List.of("f32"))).pushBacktoInstList();
             }
             case FPToSI -> {
                 var ori = valueToReg(mbb, ir.getOperand(0));
@@ -417,7 +451,8 @@ public class InstructionSelector {
 
 
             default -> {
-//                System.out.println("Didn't process command: " + ir);
+                throw new RuntimeException("Didn't process command: " + ir);
+
             }
         }
     }
